--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>DevPop</title>
+	<title>roda de cores CSS || jeanhenriquegba || @Dante.Henri</title>
 <style>
 *{
 	padding:0;
